@@ -1,3 +1,9 @@
+2014-10-23  Martin Rudalics  <rudalics@gmx.at>
+
+	* frame.c (Fset_frame_height, Fset_frame_width, Fset_frame_size)
+	(frame_resize_pixelwise, frame_inhibit_implied_resize): Fix
+	doc-strings (Bug#18789).
+
 2014-10-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* Makefile.in (ACLOCAL_INPUTS): Omit unnecessary use of 'wildcard'.
